--- a/style.css
+++ b/style.css
@@ -14,17 +14,19 @@
 }
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body{
+    width: 100vw;
     background: var(--dark);
     color: var(--light);
+    position: relative;
+    overflow-x: hidden;
 }
 #header{
     width: 100%;
     height:100vh;
-    background-image: url();
-    background-size: cover;
-    background-position: center;
+    position: relative;
     opacity:1;
 }
 .container{
@@ -538,4 +540,29 @@ nav .fa-solid{
 }
 ::-webkit-scrollbar-thumb:hover{
     cursor:pointer;
+}
+
+
+
+
+
+.blob {
+  position: absolute;
+  top: 0;
+  left: 0;
+  fill: var(--red);
+  filter: blur(4px);
+  width: 50vmax;
+  z-index: -1;
+  animation: move 10s ease-in-out infinite;
+  transform-origin: 50% 50%;
+}
+
+@keyframes move {
+  0%   { transform: scale(1)   translate(10px, -30px); }
+  38%  { transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  40%  { transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  78%  { transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  80%  { transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  100% { transform: scale(1)   translate(10px, -30px); }
 }
