--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ nav ul li a{
     position: relative;
 }
 nav ul li a::after{
+    box-shadow: 1px 1px 2px var(--dark);
     content: '';
     width: 0;
     height: 3px;
@@ -138,6 +139,7 @@ nav ul li a:hover::after{
 }
 
 .tab-links::after{
+    box-shadow: 1px 1px 2px var(--dark);
     content: '';
     width: 0;
     height: 3px;
@@ -238,6 +240,7 @@ nav ul li a:hover::after{
     scale: 1.05 !important;
 }
 .service-tile:hover{
+    box-shadow: 2px 2px 6px 1px var(--dark);
     background: var(--primary);
     transform: translateY(-10px);
     opacity: 1;
@@ -261,10 +264,15 @@ nav ul li a:hover::after{
 
 
 .work{
+    background-size: cover;
+    background-position: center;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
     transition: all 0.5s;
+}
+.work:hover{
+    box-shadow: 2px 2px 2px var(--dark);
 }
 .work img{
     width: 100%;
@@ -314,6 +322,7 @@ nav ul li a:hover::after{
     height: 100%;
 }
 .btn{
+    box-shadow: 2px 2px 3px 1px var(--dark);
     display: block;
     margin: 50px auto;
     width: fit-content;
@@ -373,6 +382,8 @@ nav ul li a:hover::after{
     width: 100%;
 }
 form input, form textarea{
+    border-radius: 5px;
+    box-shadow: 2px 2px 6px 1px var(--dark);
     width: 100%;
     border: 0;
     outline: none;
@@ -507,6 +518,13 @@ nav .fa-solid{
 
 
 /* effects */
+
+.name{
+    text-shadow: 2px 2px 6px var(--dark);
+}
+.mini-name{
+    text-shadow: 1px 1px 2px var(--dark);
+}
 
 .hide {
     opacity: 0;
